# umr

./: .gitignore  configure.ac
include/: boot.h
src/: Makefile.am
src/commons/: Makefile.am  boot.c  string_utils.c
src/core/: Makefile.am  main.c
